changed Theme Name to Template Name

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* 
-    Theme Name: Basic HTML5/CSS3/JS Boilerplate
+    Template Name: Basic HTML5/CSS3/JS Boilerplate
     Author: RobSm!th
     Version: 1.0.0
 */
