--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ header {
     justify-content: flex-end;
     align-items: center;
     background-color: #dd3f31;
-    padding: 20px 10%;
+    padding: .8rem 10%;
     width: 100%;
     position: fixed;
 }
@@ -45,7 +45,7 @@ header {
 .logo {
     margin-right: auto;
     cursor: pointer;
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1rem;
 }
 
 .logo a {
@@ -55,16 +55,16 @@ header {
 
 .nav_links {
     display: flex;
-    margin-right: 1rem;
+    margin-right: .5rem;
 }
 
 .nav_links a {
-    padding: 0 10px;
+    padding: 0 .5rem;
     text-decoration: none;
     color: #eee;
     letter-spacing: 0.1rem;
-    text-transform: uppercase;
     font-weight: 400;
+    font-size: .9rem;
 }
 
 .nav_links a:hover {
