--- a/css/styles.css
+++ b/css/styles.css
@@ -64,56 +64,15 @@ header {
     letter-spacing: 0.1rem;
     font-weight: 400;
     font-size: .9rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
 }
 
 .nav_links a:hover {
-    color: rgba(255,255,255,.75);
+    color: rgba(255, 255, 255, .75);
 }
 
 .nav_links a.active {
     color: #fff;
-}
-
-.text-muted {
-	--bs-text-opacity: 1;
-	color: #6c757d !important;
-}
-
-.s-divider {
-	height: 3rem;
-	background-color: rgba(0, 0, 0, .1);
-	border: solid rgba(0, 0, 0, .15);
-	border-width: 1px 0;
-	box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-}
-
-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 0;
-    margin: 1.5rem;
-    /* background-color: #dd3f31; */
-}
-
-footer nav {
-    display: flex;
-}
-
-.justify-content-end {
-	justify-content: flex-end !important;
-}
-
-.col-md-4 {
-	flex: 0 0 auto;
-	width: 33.33333333%;
-}   
-
-.copy {
-    margin-top: 1rem;
-    /* color: #eee; */
-    color: #888;
 }
 
 /* 
@@ -127,6 +86,102 @@ footer nav {
     align-items: center;
     text-align: center;
     padding-top: 45vh;
+}
+
+
+/* 
+    Footer Area
+ */
+
+footer {
+    display: flex;
+    align-items: center;
+    padding: .8rem 10%;
+    margin: 1.5rem;
+    /* background-color: #dd3f31; */
+}
+
+
+
+footer .nav {
+    display: flex;
+}
+
+footer a {
+    margin-right: 1rem;
+    text-decoration: none;
+}
+
+.nav a {
+    margin-right: 1rem;
+    text-decoration: none;
+}
+
+.f-link {
+    margin-right: .5rem;
+
+}
+
+.copy {
+    /* color: #eee; */
+    color: #888;
+}
+
+/* 
+    Structure 
+*/
+
+.container {
+    width: 100%;
+    padding-right: .75rem;
+    padding-left: .75rem;
+    margin: 0 auto;
+}
+
+.d-flex {
+    display: flex !important;
+}
+
+.flex-wrap {
+    flex-wrap: wrap !important;
+}
+
+.align-items-center {
+    align-items: center !important;
+}
+
+.text-muted {
+    --bs-text-opacity: 1;
+    color: #6c757d !important;
+}
+
+.s-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.col-md-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+}
+
+.border-top {
+    border-top: 1px solid #dee2e6 !important;
+}
+
+.justify-content-between {
+    justify-content: space-between !important;
+}
+
+.justify-content-end {
+    justify-content: flex-end !important;
+}
+
+.lh-1 {
+    line-height: 1 !important;
 }
 
 /* 
@@ -183,9 +238,12 @@ footer nav {
 /* Media Quiries */
 
 @media only screen and (max-width: 280px) {
-    body, .four_p {
+
+    body,
+    .four_p {
         width: 95%;
     }
+
     .four_h1 {
         font-size: 1.5em;
         margin: 0 0 0.3em;
